chore: update documentation link

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -13,8 +13,7 @@
         <h1>Blog API</h1>
 
         <div class="postman-docs">
-            <a href="https://www.postman.com/joint-operations-geoscientist-26235604/workspace/public/collection/36744366-647ea24d-60cf-478b-afc0-d73475a00948?action=share&creator=36744366"
-                class="postman-button" target="_blank">
+            <a href="https://documenter.getpostman.com/view/36744366/2sB2x8FBVy" class="postman-button" target="_blank">
                 View Docs on Postman
             </a>
             <a href="https://github.com/jamal-o/blog-api" class="github-button" target="_blank">
